feat: add endpoint to fetch games